remove conversations delete endpoint